src/objects/RecipeStep__c.object
<CustomObject>
    <description>steps to make in the recipe</description>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Field to order Steps</description>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <description>Represent the recipe</description>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Recipes Steps</relationshipLabel>
        <relationshipName>RecipesSteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <description>description of step</description>
        <label>Step</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Recipe Step</label>
    <nameField>
        <label>Recipe Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipes Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>